--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -36,6 +36,8 @@
 #cmakedefine HAVE_STARPU_DATA_PEEK
 #cmakedefine HAVE_STARPU_SET_LIMIT_SUBMITTED_TASKS
 #cmakedefine HAVE_STARPU_REUSE_DATA_ON_NODE
+#cmakedefine HAVE_STARPU_PARALLEL_WORKER
+
 #cmakedefine HAVE_STARPU_MPI_DATA_MIGRATE
 #cmakedefine HAVE_STARPU_MPI_DATA_REGISTER
 #cmakedefine HAVE_STARPU_MPI_COMM_RANK
@@ -86,7 +88,11 @@
 #include "runtime_workspace.h"
 #include "cham_tile_interface.h"
 
-typedef struct starpu_conf starpu_conf_t;
+typedef struct starpu_schedopt_s
+{
+    struct starpu_conf                    starpu_conf; /**< StarPU main configuration structure   */
+    struct starpu_parallel_worker_config *pw_config;   /**< StarPU parallel workers configuration */
+} starpu_sched_opt_t;
 
 /* Structure used to give some options during one request (procedure) */
 typedef struct starpu_option_request_s {
