--- a/example/basic_zposv/CMakeLists.txt
+++ b/example/basic_zposv/CMakeLists.txt
@@ -41,53 +41,9 @@ precisions_rules_py(EXAMPLES "${ZSRC}"
 # Define what libraries we have to link with
 # ------------------------------------------
 unset(libs_for_examples)
-list(APPEND libs_for_examples
-     chameleon
-)
+list(APPEND libs_for_examples ${CHAMELEON_LIBRARIES_DEP})
+# message(STATUS "libs_for_examples: ${libs_for_examples}")
 
-if(CHAMELEON_SCHED_STARPU)
-    list(APPEND libs_for_examples
-      chameleon_starpu
-      ${STARPU_LIBRARIES_DEP}
-    )
-    link_directories(${STARPU_LIBRARY_DIRS})
-elseif(CHAMELEON_SCHED_PARSEC)
-    list(APPEND libs_for_examples
-         chameleon_parsec
-         ${PARSEC_LIBRARIES_DEP}
-      )
-    link_directories(${PARSEC_LIBRARY_DIRS_DEP})
-elseif(CHAMELEON_SCHED_QUARK)
-    list(APPEND libs_for_examples
-         chameleon_quark
-         ${QUARK_LIBRARIES}
-      )
-    link_directories(${QUARK_LIBRARY_DIRS})
-endif()
-
-if(CHAMELEON_USE_CUDA)
-  list(APPEND libs_for_examples
-    cudablas)
-endif()
-if(CHAMELEON_USE_CUDA)
-  link_directories(${CUDA_LIBRARY_DIRS})
-endif()
-
-list(APPEND libs_for_examples
-  coreblas
-  ${LAPACKE_LIBRARIES}
-  ${CBLAS_LIBRARIES}
-  ${LAPACK_SEQ_LIBRARIES}
-  ${BLAS_SEQ_LIBRARIES}
-  ${EXTRA_LIBRARIES}
-  )
-
-link_directories(${LAPACKE_LIBRARY_DIRS})
-link_directories(${LAPACK_LIBRARY_DIRS})
-link_directories(${CBLAS_LIBRARY_DIRS})
-link_directories(${BLAS_LIBRARY_DIRS})
-
-# message(STATUS "libs timings: ${libs_for_examples}")
 foreach(_example ${EXAMPLES})
     get_filename_component(_name_exe ${_example} NAME_WE)
     add_executable(${_name_exe} ${_example})
