remove the dependency on chameleon for step0 which is a pure cblas/lapacke driver

--- a/example/lapack_to_morse/CMakeLists.txt
+++ b/example/lapack_to_morse/CMakeLists.txt
@@ -45,7 +45,7 @@ list(APPEND libs_for_ltm
 # multithreaded BLAS and LAPACK libraries for this step
 unset(libs_for_step0)
 list(APPEND libs_for_step0
-  ${libs_for_ltm}
+  ${LAPACKE_LIBRARIES}
   ${CBLAS_LIBRARIES}
   )
 
